--- a/pbl/pbl.csproj
+++ b/pbl/pbl.csproj
@@ -58,6 +58,18 @@
     <Compile Include="Form1.Designer.cs">
       <DependentUpon>Form1.cs</DependentUpon>
     </Compile>
+    <Compile Include="Hoadon_nhanvien.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Hoadon_nhanvien.Designer.cs">
+      <DependentUpon>Hoadon_nhanvien.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Khachhang_Nhanvien.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Khachhang_Nhanvien.Designer.cs">
+      <DependentUpon>Khachhang_Nhanvien.cs</DependentUpon>
+    </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <EmbeddedResource Include="ADMIN.resx">
@@ -65,6 +77,12 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Form1.resx">
       <DependentUpon>Form1.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Hoadon_nhanvien.resx">
+      <DependentUpon>Hoadon_nhanvien.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Khachhang_Nhanvien.resx">
+      <DependentUpon>Khachhang_Nhanvien.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
@@ -118,6 +136,18 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="Resources\thongke.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\taohoadon.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\danhsachhoadon.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\themkhachhang.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\danhsachkhachhang.png" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
