--- a/pbl/GUI.csproj
+++ b/pbl/GUI.csproj
@@ -35,6 +35,9 @@
   <ItemGroup>
     <Reference Include="System" />
     <Reference Include="System.Core" />
+    <Reference Include="System.Data.SqlClient, Version=4.6.1.6, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a, processorArchitecture=MSIL">
+      <HintPath>..\packages\System.Data.SqlClient.4.8.6\lib\net461\System.Data.SqlClient.dll</HintPath>
+    </Reference>
     <Reference Include="System.Windows.Forms.DataVisualization" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
@@ -47,8 +50,6 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="ChiTietHoaDon.cs" />
-    <Compile Include="HoaDon.cs" />
     <Compile Include="MainFormAdmin.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -61,7 +62,6 @@
     <Compile Include="ChinhSuaThongTinCaNhan.Designer.cs">
       <DependentUpon>ChinhSuaThongTinCaNhan.cs</DependentUpon>
     </Compile>
-    <Compile Include="ChiTietSanPham.cs" />
     <Compile Include="DanhSachHoaDon.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -116,8 +116,6 @@
     <Compile Include="Khachhang_Nhanvien.Designer.cs">
       <DependentUpon>Khachhang_Nhanvien.cs</DependentUpon>
     </Compile>
-    <Compile Include="NhanVien.cs" />
-    <Compile Include="NhaPhanPhoi.cs" />
     <Compile Include="QuanLyNhaPhanPhoi.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -144,8 +142,6 @@
     <Compile Include="QuanLySanPham.Designer.cs">
       <DependentUpon>QuanLySanPham.cs</DependentUpon>
     </Compile>
-    <Compile Include="SanPham.cs" />
-    <Compile Include="TaiKhoang.cs" />
     <Compile Include="ThemHoadon.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -273,6 +269,7 @@
     <EmbeddedResource Include="Warning.resx">
       <DependentUpon>Warning.cs</DependentUpon>
     </EmbeddedResource>
+    <None Include="packages.config" />
     <None Include="Properties\Settings.settings">
       <Generator>SettingsSingleFileGenerator</Generator>
       <LastGenOutput>Settings.Designer.cs</LastGenOutput>
